Closed
Bug 795737
Opened 13 years ago
Closed 12 years ago
"Assertion `! _cairo_surface_has_snapshots (surface)' failed. " after Bug 486918 fixed
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla25
People
(Reporter: ojab, Assigned: joe)
References
()
Details
Attachments
(2 files)
|
8.16 KB,
text/plain
|
Details | |
|
872 bytes,
patch
|
bas.schouten
:
review+
|
Details | Diff | Splinter Review |
I'm getting crashes with
firefox: cairo-surface.c:1463: cairo_surface_mark_dirty_rectangle: Assertion `! _cairo_surface_has_snapshots (surface)' failed.
on changeset 108670:27e0c22b96e5 (mozilla-inbound tree) and above, build with system cairo-1.12.2 & cairo-git.
Fx built with bundled cairo doesn't crashes.
You can find `gdb bt full` (using cairo-git) in the attached file.
Please note that --enable-system-cairo is broken, patch can be found in Bug 722975.
| Assignee | ||
Comment 1•13 years ago
|
||
Can you give me an example of a testcase that causes this assertion failure?
Yes, first testcase for Bug 486918 works (in URL, https://bug486918.bugzilla.mozilla.org/attachment.cgi?id=428179).
Page load leads to assertion in 100% cases for me.
| Assignee | ||
Comment 3•13 years ago
|
||
Sorry, missed that somehow.
I can reproduce this bug. I'll investigate it.
Assignee: nobody → joe
| Assignee | ||
Comment 4•13 years ago
|
||
In lieu of implementing bug 797083 in full, let's just Flush in MarkDirty too.
Attachment #667130 -
Flags: review?(bas.schouten)
| Assignee | ||
Updated•13 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•13 years ago
|
||
Comment on attachment 667130 [details] [diff] [review]
flush in unlock
Review of attachment 667130 [details] [diff] [review]:
-----------------------------------------------------------------
Some FIXME or something would be nice ;) Or a reference to bug 797083.
Attachment #667130 -
Flags: review?(bas.schouten) → review+
Bug 722975 is finally going to be fixed in mozilla-central (patch already passed try build and applied to mozilla-inbound), after that mozilla-central will be buildable with system cairo out of the box again.
Can this patch be applied in the current form (so I'll set [checkin-needed]) or additional FIXME is a must?
If so — Joe, can you make this changes?
| Assignee | ||
Comment 7•13 years ago
|
||
I think I'm actually going to fix this by fixing bug 797083, but I'll try to do that very very soon.
| Assignee | ||
Comment 8•12 years ago
|
||
Well, so much for that. I'm going to land this patch in order to fix this very assertion, caused by patches in bug 717872.
Blocks: omtagif
| Assignee | ||
Comment 9•12 years ago
|
||
Comment 10•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in
before you can comment on or make changes to this bug.
Description
•